# csem-student-template

./: CMakeLists.txt  cgram.y  csem.docx  makefile  myalloc.c  sym.c  sym.h
tests/: t.c  t2.c  test1.c  test1.sem  test10.sem  test11.sem  test12.sem  test13.sem  test14.sem  test15.sem  test16.sem  test17.sem  test18.sem  test19.sem  test2.sem  test20.sem  test21.sem  test22.sem  test23.sem  test24.sem  test25.c  test25.sem  test26.sem  test27.sem  test28.sem  test29.sem  test3.sem  test30.c  test30.sem  test31.sem  test4.c  test4.sem  test5.sem  test6.sem  test7.sem  test8.sem  test9.sem  testex2.c  tmp.c  tmp2.c  (+2 more)
